# Arrows

./: .gitignore  Cargo.toml  Makefile  README.md  requirement.txt
Cross/: main.py
Docs/: arrows_python_engine.ods
Drafting/: README.md
Drafting Board/simplecircuit/: __main__.py
Drafting Board/simplecircuit/blueprints/: blueprint.py  blueprint_logic.py
Drafting Board/simplecircuit/engine/: solver.py
Graphics/: arrow_prerenders.html
Graphics/Version_1/: _ionicons_svg_md-arrow-round-forward.xcf  split.xcf  subpixel_test.py
Graphics/Version_2/: Spritesheet.xcf
Logic Board/: Cargo.toml
Logic Board/src/: block.rs  board.rs  main.rs  view.rs
Logic/src/: block.rs  lib.rs  main.rs
Piston Testing/src/: gameboard_view.rs  main.rs
View/: Cargo.toml
View/src/: main.rs
docs/: structure.txt
gg/src/: main.rs
src/: main.rs
src/Drafting/simplecircuit/: app.py
src/Logic/: Cargo.toml
src/Logic/src/: lib.rs  view.rs
src/View/: Cargo.toml
src/View/src/: lib.rs  main.rs
src/bridge_python_side/: adapter.py  comm.py
src/bridge_rust_side/src/: lib.rs
src/draft/: __main__.py  app.py  block.py  section.py
src/draft/blueprints/: adj_level_raster.py  blueprint_logic.py  connector.py  defaults.py  raster.py  topological_sort.py
src/draft/defaults/: defaults.py
src/draft/engine/: controller.py  model.py
src/draft/maker/: connector.py  form.py  raster.py  topological_sort.py
src/logic/: Cargo.toml
src/python_side/: adapter.py  comm.py  converter.py  main.py
src/rust_side/: Cargo.toml
src/view/: Cargo.toml
src/view/src/: assets.rs  lib.rs
(+15 files in other folders)
