[package]
name = "view"
version = "0.1.0"
authors = ["lazydancer <jrpucula@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { git = "https://github.com/ggez/ggez" }
rand = "*"
mint = "*"
glam = "*"
cgmath = { version = "*", features = ["mint"]}
logic = { path = "../logic" }